# lambda-janitor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
lambda_janitor/: main.py
tests/: test_janitor.py
